--- a/index.html
+++ b/index.html
@@ -36,6 +36,79 @@
     <h2 class="subheading">KRÁSA OKAMIHU</h2>
 </section>
 
+<!-- Centered Text Section -->
+<section id="description" class="container text-center mt-5">
+    <h2 class="description-title">Hi, I am a Storyteller.</h2>
+    <p class="description-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec felis libero. Ut blandit viverra urna quis scelerisque.
+    </p>
+    <p class="description-text">
+        Morbi non velit at nibh vulputate tincidunt. Nulla varius pellentesque dolor, quis accumsan mi aliquam ac.
+    </p>
+</section>
+
+<!-- Horizontal Line -->
+<hr class="divider">
+
+<!-- "See My Work" Section -->
+<section id="see-my-work" class="container text-center mt-5">
+    <h2 class="section-title">See My Work</h2>
+    <div class="row mt-4">
+        <div class="col-md-4">
+            <div class="work-item" id="wedding">
+                <img src="img/wedding.jpg" alt="Wedding" class="img-fluid">
+                <div class="work-overlay">
+                    <h3>Wedding</h3>
+                    <p>Lorem ipsum dolor</p>
+                    <a href="#wedding" class="work-link">→</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="work-item" id="family">
+                <img src="img/family.jpg" alt="Family" class="img-fluid">
+                <div class="work-overlay">
+                    <h3>Family</h3>
+                    <p>Lorem ipsum dolor</p>
+                    <a href="#family" class="work-link">→</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="work-item" id="seasonal">
+                <img src="img/seasonal.jpg" alt="Seasonal" class="img-fluid">
+                <div class="work-overlay">
+                    <h3>Seasonal</h3>
+                    <p>Lorem ipsum dolor</p>
+                    <a href="#seasonal" class="work-link">→</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Quote Section with Background Image -->
+<section id="quote" class="quote-section">
+    <div class="quote-text">
+        <h3>“It is an illusion that photos are made with the camera… they are made with the eye, heart and head.”</h3>
+        <p>– Henri Cartier-Bresson</p>
+    </div>
+</section>
+
+<!-- Horizontal Line -->
+<hr class="divider">
+
+<!-- Footer -->
+<footer id="footer" class="text-center">
+    <p>All content Copyright © 2024 Paulína Drahošová</p>
+    <div class="social-links">
+        <a href="https://www.facebook.com/paulifotografka" target="_blank">Facebook</a> |
+        <a href="https://www.instagram.com/paulifotografka/" target="_blank">Instagram</a>
+    </div>
+    <div class="back-to-top">
+        <a href="#home">Back to top ↑</a>
+    </div>
+</footer>
 
 
 <!-- Bootstrap JS and dependencies -->
