Added font and updated text for text section in Home page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Photographer Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Google Fonts Cormorant -->
+    <!-- Google Fonts Cormorant and Cardo -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Cardo:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -38,12 +38,19 @@
 
 <!-- Centered Text Section -->
 <section id="description" class="container text-center mt-5">
-    <h2 class="description-title">Hi, I am a Storyteller.</h2>
+    <h2 class="description-title">Zachytávam okamihy, ktoré hovoria príbehy.</h2>
     <p class="description-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec felis libero. Ut blandit viverra urna quis scelerisque.
+        Fotografovanie je môj spôsob, ako zachytávať príbehy, ktoré presahujú slová. Každá fotografia uchováva okamih, spojenie,
+        prchavú emóciu, ktorá by inak zmizla s časom. Verím v uchovávanie pravej krásy života, či už je to radosť zo svadby,
+        teplo rodinných chvíľ, alebo žiarivosť sezónnych osláv. Mojím cieľom je zachytiť nielen tváre, ale aj pocity a premeniť
+        ich na spomienky, ktoré si ľudia budú navždy vážiť.
+
     </p>
     <p class="description-text">
-        Morbi non velit at nibh vulputate tincidunt. Nulla varius pellentesque dolor, quis accumsan mi aliquam ac.
+        Prostredníctvom mojej práce sa snažím rozprávať príbehy, ktoré sú intímne a autentické, zobraziť emócie a zážitky tých,
+        ktorých fotím. Či už ide o zamilovaný pár, rodinu tráviacu spoločné chvíle alebo kúzlo sviatkov, každý moment, ktorý
+        zachytím, je jedinečný a nenahraditeľný. Každé fotenie vnímam ako príležitosť spojiť sa, tvoriť a zvečňovať krásu,
+        ktorá sa skrýva v jednoduchosti života.
     </p>
 </section>
 
@@ -87,13 +94,14 @@
     </div>
 </section>
 
-<!-- Quote Section with Background Image -->
+<!-- Quote Section -->
 <section id="quote" class="quote-section">
     <div class="quote-text">
         <h3>“It is an illusion that photos are made with the camera… they are made with the eye, heart and head.”</h3>
         <p>– Henri Cartier-Bresson</p>
     </div>
 </section>
+
 
 <!-- Horizontal Line -->
 <hr class="divider">
