added ref to aboutme html

--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link home-link" href="#home">Domov</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#about">Viac o mne</a>
+                <a class="nav-link" href="AboutMe.html">Viac o mne</a>
             </li>
         </ul>
     </div>
