changes in about me

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         &family=Frank+Ruhl+Libre:wght@300..900&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Custom JS -->
-    <script src="../js/backgroundChange.js"></script>
+    <script src="js/backgroundChange.js"></script>
 </head>
 <body>
 <!-- Navigation Bar -->
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link home-link" href="#home">Domov</a>
+                <a class="nav-link home-link" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="AboutMe.html">Viac o mne</a>
