changes in about me

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -32,3 +32,19 @@
   </div>
 </nav>
 
+
+<!-- Full-screen Image Section -->
+<section id="about-me" class="full-screen">
+  <h1>Spoznaj ma o trochu viac</h1>
+  <h2 class="subheading">Moje vášne, záľuby a viac</h2>
+</section>
+
+<!-- Content Section -->
+<section class="container text-center mt-5">
+  <p class="lead">
+    Som vášnivá fotografka, ktorá miluje zachytávať jedinečné okamihy. Môj svet sa točí okolo umenia, prírody a príbehov,
+    ktoré sa skrývajú za každou fotkou. Chcete vedieť viac o mne a mojej práci? Ste na správnom mieste.
+  </p>
+  <!-- Add more content here -->
+</section>
+
