--- a/AboutMe.html
+++ b/AboutMe.html
@@ -48,3 +48,21 @@
   <!-- Add more content here -->
 </section>
 
+<!-- Footer -->
+<footer id="footer" class="text-center">
+  <p>All content Copyright © 2024 Paulína Drahošová</p>
+  <div class="social-links">
+    <a href="https://www.facebook.com/paulifotografka" target="_blank">Facebook</a> |
+    <a href="https://www.instagram.com/paulifotografka/" target="_blank">Instagram</a>
+  </div>
+  <div class="back-to-top">
+    <a href="#about-me">Back to top ↑</a>
+  </div>
+</footer>
+
+<!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
