changes in about me, added portfolio.html with bootstrap nav bar

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,13 +20,13 @@
   <div class="container">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#portfolio">Portfolio</a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
         <a class="nav-link home-link" href="index.html">Domov</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="AboutMe.html">Viac o mne</a>
+        <a class="nav-link" href="aboutMe.html">Viac o mne</a>
       </li>
     </ul>
   </div>
@@ -34,7 +34,7 @@
 
 
 <!-- Full-screen Image Section -->
-<section id="about-me" class="full-screen">
+<section id="about-me" class="background-section">
   <h1>Spoznaj ma o trochu viac</h1>
   <h2 class="subheading">Moje vášne, záľuby a viac</h2>
 </section>
