--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
     <div class="container">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#portfolio">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link home-link" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="AboutMe.html">Viac o mne</a>
+                <a class="nav-link" href="aboutMe.html">Viac o mne</a>
             </li>
         </ul>
     </div>
 </nav>
 
 <!-- Full-screen Image Section -->
-<section id="home" class="full-screen">
+<section class="full-screen background-section">
     <h1>Fotenie je poézia</h1>
     <h2 class="subheading">KRÁSA OKAMIHU</h2>
 </section>
