changes in about me

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <a href="https://www.instagram.com/paulifotografka/" target="_blank">Instagram</a>
     </div>
     <div class="back-to-top">
-        <a href="#home">Back to top ↑</a>
+        <a href="index.html">Back to top ↑</a>
     </div>
 </footer>
 
