--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Viac o mne</title>
+  <title>O mne</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Fonts -->
@@ -26,12 +26,11 @@
         <a class="nav-link home-link" href="index.html">Domov</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="aboutMe.html">Viac o mne</a>
+        <a class="nav-link" href="aboutMe.html">O mne</a>
       </li>
     </ul>
   </div>
 </nav>
-
 
 <!-- Full-screen Image Section -->
 <section id="about-me" class="background-section">
@@ -41,12 +40,28 @@
 
 <!-- Content Section -->
 <section class="container text-center mt-5">
-  <p class="lead">
-    Som vášnivá fotografka, ktorá miluje zachytávať jedinečné okamihy. Môj svet sa točí okolo umenia, prírody a príbehov,
-    ktoré sa skrývajú za každou fotkou. Chcete vedieť viac o mne a mojej práci? Ste na správnom mieste.
-  </p>
-  <!-- Add more content here -->
+  <div class="row align-items-center">
+    <!-- Image Section -->
+    <div class="col-md-5">
+      <img src="img/aboutMePauli.jpg" class="img-fluid" alt="Fotografka">
+    </div>
+    <!-- Text Section -->
+    <div class="col-md-7 text-left">
+      <h2 class="about-me-title">Paulína Drahošová</h2>
+      <p class="lead">
+        Som vášnivá fotografka z Galanty a fotografii sa venujem už od svojich trinástich rokov, čo znamená, že za objektívom
+        mám viac ako desaťročie skúseností. Mám 26 rokov a aj keď fotenie robím popri mojej hlavnej práci, stále je pre mňa
+        viac než len hobby – je to spôsob, ako zachytávať neopakovateľné príbehy a spomienky, ktoré vydržia celý život.
+      </p>
+      <p class="lead">
+        Najradšej fotím rodiny, deti a svadby, pretože práve tieto chvíle sú plné úprimných emócií, radosti a spontánnych
+        momentov, ktoré si ľudia chcú navždy zapamätať. Milujem tiež cestovanie, a preto sa vždy snažím spojiť svoje cesty
+        s fotografiou. Každé nové miesto mi ponúka inšpiráciu a príležitosť zachytiť krásu okamihu inak.
+      </p>
+    </div>
+  </div>
 </section>
+
 
 <!-- Footer -->
 <footer id="footer" class="text-center">
@@ -63,6 +78,6 @@
 <!-- Bootstrap JS and dependencies -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://stackpath.amazonaws.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
