--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link home-link" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="aboutMe.html">Viac o mne</a>
+                <a class="nav-link" href="aboutMe.html">O mne</a>
             </li>
         </ul>
     </div>
@@ -36,8 +36,8 @@
 
 <!-- Full-screen Image Section -->
 <section class="full-screen background-section">
-    <h1>Fotenie je poézia</h1>
-    <h2 class="subheading">KRÁSA OKAMIHU</h2>
+    <h1>Pauli fotografka</h1>
+    <h2 class="subheading">GALANTA - SLOVAKIA</h2>
 </section>
 
 <!-- Centered Text Section -->
