--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <a class="nav-link home-link" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="aboutMe.html">Viac o mne</a>
+                <a class="nav-link" href="aboutMe.html">O mne</a>
             </li>
         </ul>
     </div>
