--- a/aboutMe.html
+++ b/aboutMe.html
@@ -48,12 +48,12 @@
     <!-- Text Section -->
     <div class="col-md-7 text-left">
       <h2 class="about-me-title">Paulína Drahošová</h2>
-      <p class="lead">
+      <p class="cormorant">
         Som vášnivá fotografka z Galanty a fotografii sa venujem už od svojich trinástich rokov, čo znamená, že za objektívom
         mám viac ako desaťročie skúseností. Mám 26 rokov a aj keď fotenie robím popri mojej hlavnej práci, stále je pre mňa
         viac než len hobby – je to spôsob, ako zachytávať neopakovateľné príbehy a spomienky, ktoré vydržia celý život.
       </p>
-      <p class="lead">
+      <p class="cormorant">
         Najradšej fotím rodiny, deti a svadby, pretože práve tieto chvíle sú plné úprimných emócií, radosti a spontánnych
         momentov, ktoré si ľudia chcú navždy zapamätať. Milujem tiež cestovanie, a preto sa vždy snažím spojiť svoje cesty
         s fotografiou. Každé nové miesto mi ponúka inšpiráciu a príležitosť zachytiť krásu okamihu inak.
@@ -78,6 +78,5 @@
 <!-- Bootstrap JS and dependencies -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.amazonaws.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
